[tool.poetry]
name = "meraki_rma"
version = "0.1.16"
description = "Library to make Meraki RMAs easy and programmatic."
authors = ["Thomas Christory"]
readme = "README.md"
homepage = "https://github.com/thomaschristory/meraki_rma"
keywords = ["meraki", "dashboard", "cisco", "python"]

[tool.poetry.dependencies]
python = "^3.8"
meraki = "^1.4.3"
meraki-env = "^0.1.1"
meraki-dashboard-connect = "^0.1.1"
rich = "^10.10.0"
meraki-exception = "^0.1.1"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/thomaschristory/meraki_rma/issues"